--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         </div>
         <div class="row">
           <div class="col-lg-3"></div>
-          <div class="col-lg-3"> <a href="https://www.digitaledge.net" target="_blank">
-              <img src="assets/img/logos/digitaledge-logo.gif" alt=""></a> </div>
+          <div class="col-lg-3"> <a href="https://ingrammiccro.com/" target="_blank">
+              <img src="assets/img/logos/ingram_black_logo.png" alt=""></a> </div>          
           <div class="col-lg-3"> <a href="https://asgardcompliance.com/" target="_blank">
               <img src="assets/img/logos/asgard-logo.png" alt=""></a> </div>
         </div>
